    Proc::Simple CHANGES
######################################################################

          From 1.27:
                     [RT 62802] Pod fix by Salvatore Bonaccorso
                     [RT 63833] Applied patch to stop reaping PIDs of 
                       no longer existing processes (submitted by perlbotics).
                     Added licensizer

          From 1.26: [RT 62285] Pod fix for redirect_output()
                     Fixed github link

          from 1.25: Localize special variables so that the exit status 
                     from waitpid doesn't leak out, causing exit status 
                     to be incorrect (RT33440, fixed by Brad Cavanagh).

          from 1.24: Added copyright header

          from 1.23: Applied doc patch by Janne Chr. Schulz

          from 1.22: Applied patch by Jeff Holt, providing start
                     and end time of the forked process via t0() and t1().

          from 1.21: Added patch by Chip Capelik to provide a wait()
                     method waiting for a process to terminate.

          from 1.20: Added patch by Tobias Jahn <tjahn@users.sourceforge.net>,
                     to redirect STDOUT or STDERR of the child process upon
                     request.

          from 1.19: Fixed bug which occurred on failed fork()s, as 
                     reported anonymously on the CPAN bug tracker.

          from 1.18: Added multi-arg start method (proposed by
                     Clauss Strauch <Clauss_Strauch@aquila.fac.cs.cmu.edu>)

          from 1.17: Fixed Version difference between Makefile.PL
                     and Simple by using VERSION_FROM (thanks
                     Andreas Koenig)

          from 1.16: Fixed bug with Proc::Simple instances which
                     were DESTROYED before they were ever started.
                     Many thanks to Russell Fulton (r.fulton@auckland.ac.nz)
                     for pointing this out.
